--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -1,12 +1,12 @@
 on:
-  issue_comment:
-    types: [created]
+  pull_request:
+    types: [labeled]
 
 name: Automatic Rebase
 jobs:
   rebase:
     name: Rebase
-    if: github.event.issue.pull_request != '' && contains(github.event.comment.body, '/rebase')
+    if: github.event.issue.pull_request != '' && github.event.label == 'needs-rebase'
     runs-on: ubuntu-latest
 
     steps:
