--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -6,7 +6,7 @@ name: Automatic Rebase
 jobs:
   rebase:
     name: Rebase
-    if: github.event.issue.pull_request != '' && github.event.pull_request.label.name == 'needs-rebase'
+    if: github.event.issue.pull_request != '' && github.event.label.name == 'needs-rebase'
     runs-on: ubuntu-latest
 
     steps:
