--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -1,12 +1,12 @@
 on:
-  issues:
+  pull_request:
     types: [labeled]
 
 name: Automatic Rebase
 jobs:
   rebase:
     name: Rebase
-    # if: github.event.pull_request != '' && github.event.label.name == 'needs-rebase'
+    if: github.event.pull_request != '' && github.event.label.name == 'needs-rebase'
     runs-on: ubuntu-latest
 
     steps:
